smoothing animation perception

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -161,7 +161,8 @@ $body-background-color = $white
 
 $global-block-box-shadow = 0 0 rem(15px) $black-10
 $global-block-box-shadow-hover = 0 0 rem(30px) $black-15
-$link-transition = color .15s ease-in
+$link-transition = color 200ms ease-out
+$button-transition = all 200ms ease-out
 
 // ------------------------------------------------------
 // ------ TOP MENU
@@ -427,7 +428,7 @@ $module-story-share-size-desktop = rem(21px)
 $module-weather-tip-background-color = $light-blue
 $module-weather-tip-background-hover-color = $medium-blue
 $module-weather-tip-icon-color = $navy
-$module-weather-tip-icon-hover-color = $yellow
+$module-weather-tip-icon-hover-color = $white
 $module-weather-tip-text-color = $white
 $module-weather-tip-text-hover-color = $white
 $module-weather-tip-box-shadow = inset 0px rem(-15px) rem(15px) rem(-15px) $black-10
