--- a/src/styles/inc/_buttons.styl
+++ b/src/styles/inc/_buttons.styl
@@ -11,7 +11,7 @@ $button
   text-align center
   text-decoration none
   text-transform $button-transform
-  transition all 0.1s ease-in
+  transition $button-transition
   vertical-align: middle
 
   &:hover
