--- a/src/styles/modules/_block-home-featured-video.styl
+++ b/src/styles/modules/_block-home-featured-video.styl
@@ -105,7 +105,7 @@
       content ''
       display block
       height rem(94px)
-      transition: background-color .15s ease-in
+      transition: background-color 200ms ease-out
       mask: embedurl("../sprites/play.svg", "utf8") no-repeat 50% 50%/100% 100%
       margin-bottom rem(21.5px)
 
