--- a/src/styles/modules/_block-subpage.styl
+++ b/src/styles/modules/_block-subpage.styl
@@ -12,7 +12,7 @@
     background-color $module-subpages-background-color
     box-shadow $module-subpages-box-shadow
     text-decoration $module-subpages-link-decoration
-    transition: box-shadow .15s ease-in
+    transition: box-shadow 200ms ease-out
 
   h3
     color $module-subpages-link-color
@@ -33,7 +33,7 @@
       width rem(16px)
       mask: embedurl("../sprites/arrow-right.svg", "utf8") no-repeat 50% 50%/12px 12px
       margin-left: 0.15em
-      transition: background-color .15s ease-in, margin-left .15s ease-in
+      transition: background-color 200s ease-out, margin-left 200s ease-out
       vertical-align middle
 
   a:hover
