--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -55,7 +55,7 @@
         display block
         height rem(16.5px)
         width rem(16.5px)
-        transition: background-color .1s ease-in
+        transition: background-color 200ms ease-out
         mask: embedurl("../sprites/arrow-down.svg", "utf8") no-repeat 50% 50%/16.5px 16.5px
         z-index 5
         +above(m)
