--- a/src/styles/site/_content.styl
+++ b/src/styles/site/_content.styl
@@ -34,7 +34,7 @@
     color: $content-link-color
     font-weight: $content-link-weight
     text-decoration: $content-link-decoration
-    transition: $link-transition, text-decoration .15s ease-in
+    transition: $link-transition, text-decoration 200ms ease-out
     &:active
     &:focus
     &:link
