--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -1,6 +1,7 @@
 @import 'normalize.css/normalize.css'
 
-@import url(//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i\|Source\+Sans\+Pro:400,400i,700,700i\|Playfair\+Display:700i)
+// Deprecated in favor of https://speedfont.com
+// @import url(//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i\|Source\+Sans\+Pro:400,400i,700,700i\|Playfair\+Display:700i)
 
 @require './_vars'
 @require './mixins/*'
@@ -17,6 +18,7 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import '@fancyapps/fancybox/dist/jquery.fancybox.css'
 
 @import './inc/_box-sizing'
+@import './inc/_touch-action'
 @import './inc/_images'
 @import './inc/_code'
 @import './inc/_forms'
