--- a/src/styles/modules/_block-news-events-home.styl
+++ b/src/styles/modules/_block-news-events-home.styl
@@ -36,7 +36,6 @@
       height rem(18px)
       width rem(18px)
       margin-right: 0.4em
-      transition: background-color .1s ease-in
       vertical-align baseline
 
   > a
@@ -57,7 +56,7 @@
       padding-left rem(15px)
       padding-right rem(15px)
       text-decoration none
-      transition: all .15s
+      transition: $button-transition
       +above(m)
         padding-bottom rem(30px)
         padding-left: 'calc(%s * (-%s/%s * -%s) - (%s - %s * (-%s/%s * -%s)) + %s)' % (100vw 1 36 1 30px 30px 1 36 1 30px)
