--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -77,10 +77,10 @@ aside #block--quick-links
       width rem(16px)
       mask: embedurl("../sprites/arrow-right.svg", "utf8") no-repeat 50% 50%/12px 12px
       margin-left: 0.15em
-      transition: background-color 200ms ease-out, margin-left 200ms ease-out
+      transition: background-color 200ms ease-out, transform 200ms ease-out
       vertical-align middle
 
     &:hover
       color $module-quick-links-link-hover-color
       &:after
-        margin-left: 0.35em
+        transform translateX(0.35em)
