--- a/src/styles/modules/_block-spotlight.styl
+++ b/src/styles/modules/_block-spotlight.styl
@@ -74,13 +74,13 @@
         width rem(16px)
         mask: embedurl("../sprites/arrow-right.svg", "utf8") no-repeat 50% 50%/12px 12px
         margin-left: 0.15em
-        transition: background-color 200ms ease-out, margin-left 200ms ease-out
+        transition: background-color 200ms ease-out, transform 200ms ease-out
         vertical-align middle
 
     &:hover
       box-shadow $module-spotlight-box-shadow-hover
       > h3:after
-        margin-left: 0.35em
+        transform translateX(0.35em)
       figure img
         transform scale(1.08)
 
