--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -21,6 +21,7 @@ $newsImageRatio = ((1/3) * 100)%
       right: 0
       bottom: 0
       left: 0
+      z-index: auto
     .parallax__layer--back
       transform: translateZ(-1px) scale(2)
     .parallax__layer--base
