convert font loading to use speedfont

--- a/templates/layouts/base/_core.twig
+++ b/templates/layouts/base/_core.twig
@@ -16,6 +16,7 @@
 {% do view.registerCssFile(craft.stamp.er('/assets/css/master.css')) %}
 
 {% do view.registerJsFile('//code.jquery.com/jquery-3.2.1.min.js') %}
+{% do view.registerJsFile('//speedfont.com/api?key=qCWgzVFVUilK') %}
 {% do view.registerJsFile(craft.stamp.er('/assets/js/scripts.js')) %}
 
 {{ head() }}
