--- a/templates/modules/content/_block-weather-tip.twig
+++ b/templates/modules/content/_block-weather-tip.twig
@@ -1,4 +1,3 @@
 <section id="block--weather-tip">
-  <style>.fancybox-slide--iframe .fancybox-content {width: 800px; height: 220px; max-width: 80%; max-height: 80%; margin: 0;}</style>
-  <a data-fancybox data-type="iframe" data-src="https://embed.windy.com/embed2.html?lat=40.558508&lon=-85.659925&type=forecast&metricWind=mph&metricTemp=%C2%B0F" href="javascript:;" title="Weather">Weather</a>
+  <a data-fancybox data-options='{"toolbar" : false, "smallBtn" : true, "iframe" : { "css" : { "height" : "220px" }, "preload" : true }, "src" : "https://embed.windy.com/embed2.html?lat=40.558508&lon=-85.659925&type=forecast&metricWind=mph&metricTemp=%C2%B0F", "type" : "iframe"}' href="javascript:;" title="Weather">Weather</a>
 </section>
