--- a/src/styles/inc/_code.styl
+++ b/src/styles/inc/_code.styl
@@ -7,7 +7,10 @@
 code, .code
   font-family: $code
 
-.pre
+pre
   overflow-x: auto
   overflow-y: hidden
-  overflow:   scroll
+  overflow: scroll
+  white-space: pre-wrap
+  word-wrap: break-word
+
