--- a/src/styles/modules/_block-mayor-welcome.styl
+++ b/src/styles/modules/_block-mayor-welcome.styl
@@ -78,7 +78,7 @@
     +above(m)
       font-size $module-mayors-welcome-text-size-desktop
   > a
-    @extend $button
+    button()
     display block
     margin-top rem(35px)
     margin-left auto
