--- a/src/styles/modules/_block-news-events-home.styl
+++ b/src/styles/modules/_block-news-events-home.styl
@@ -39,7 +39,7 @@
       vertical-align baseline
 
   > a
-    @extend $button
+    button()
     display block
     margin rem(32px) auto 0
     width 65%
