--- a/src/styles/modules/_block-story-share.styl
+++ b/src/styles/modules/_block-story-share.styl
@@ -34,7 +34,7 @@
       font-size $module-story-share-size-desktop
 
   > a
-    @extend $button
+    button()
     display block
     margin rem(32px) auto 0
     width 65%
