--- a/src/styles/site/_layout-columns.styl
+++ b/src/styles/site/_layout-columns.styl
@@ -11,8 +11,8 @@
       // placeholder:
       width 100%
 
-      +above(m)
-        lost-flex-container: row
+      // +above(m)
+      //   lost-flex-container: row
 
 
 
