--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -1,6 +1,6 @@
 $landingImageRatio = (5/12)
 $standardImageRatio = (25/72)
-$newsImageRatio = ((1/3) * 100)%
+$newsImageRatio = percentage(1/3)
 
 .parallax__layer--base #page--inner--columns
   background-color $white
