--- a/src/styles/inc/_buttons.styl
+++ b/src/styles/inc/_buttons.styl
@@ -1,7 +1,9 @@
-$button
+button()
   background-color $button-background
+  border 0 none
   box-shadow $button-box-shadow
   color $button-text-color
+  cursor pointer
   font-family $button-font
   font-size $button-font-size
   font-weight $button-font-weight
@@ -18,3 +20,11 @@ $button
     background-color $button-hover-background
     box-shadow $button-hover-box-shadow
     text-decoration none
+
+
+input[type=button]
+input[type=submit]
+input[type=reset]
+button
+  button()
+  min-width rem(220px)
