--- a/src/styles/inc/_forms.styl
+++ b/src/styles/inc/_forms.styl
@@ -12,3 +12,480 @@
 .input-reset::-moz-focus-inner
   border: 0
   padding: 0
+
+
+
+// REMOVING FOCUS OUTLINE
+// https://hackernoon.com/removing-that-ugly-focus-ring-and-keeping-it-too-6c8727fefcd2
+body:not(.user-is-tabbing) button:focus,
+body:not(.user-is-tabbing) input:focus,
+body:not(.user-is-tabbing) select:focus,
+body:not(.user-is-tabbing) textarea:focus
+    outline: none
+
+// body.user-is-tabbing *:focus
+//   outline: 2px solid $input-border-color-outline !important
+//   outline: 5px auto -webkit-focus-ring-color !important
+
+/* no outline for non-keyboard-inputs elements */
+button:focus
+select:focus
+  outline: none
+
+/* a subtle focus style for keyboard-input elements */
+// input[type="text"]
+// input[type="password"]
+// input[type="search"]
+// input[type="email"]
+// input[type="url"]
+// input[type="tel"]
+// input[type="number"]
+// input[type="range"]
+// input[type="date"]
+// input[type="month"]
+// input[type="week"]
+// input[type="time"]
+// input[type="datetime"]
+// input[type="datetime-local"]
+// textarea
+//   &:focus
+//     outline: 1px solid $input-outline-color
+
+
+//
+// Forms
+// --------------------------------------------------
+// Normalize non-controls
+//
+// Restyle and baseline non-control form elements.
+fieldset
+  padding 0
+  margin 0
+  border 0
+  min-width 0
+
+legend
+  display block
+  width 100%
+  padding 0
+  margin-bottom $line-height-computed
+  font-size ($base-font-size * 1.5)
+  line-height inherit
+  color $legend-color
+  border 0
+  border-bottom 1px solid $legend-border-color
+
+label
+  display inline-block
+  margin-bottom 5px
+  font-weight bold
+
+// Normalize form controls
+//
+// While most of our form styles require extra classes, some basic normalization
+// is required to ensure optimum display with or without those classes to better
+// address browser inconsistencies.
+// Override content-box in Normalize (* isn't specific enough)
+input[type="search"]
+  box-sizing border-box
+
+
+// Position radios and checkboxes better
+input[type="radio"], input[type="checkbox"]
+  margin 4px 0 0
+  margin-top 1px \9
+  /* IE8-9 */
+  line-height normal
+
+// Set the height of file controls to match text inputs
+input[type="file"]
+  display block
+
+// Make range inputs behave like textual form controls
+input[type="range"]
+  display block
+  width 100%
+
+// Make multiple select elements height not fixed
+select[multiple], select[size]
+  height auto
+
+// Focus for file, radio, and checkbox
+input[type="file"]:focus, input[type="radio"]:focus, input[type="checkbox"]:focus
+  tab-focus()
+
+
+// Adjust output element
+output
+  display block
+  padding-top ($padding-base-vertical + 1)
+  font-size $base-font-size
+  line-height $line-height-base
+  color $input-color
+
+// Common form controls
+//
+// Shared size and type resets for form controls. Apply `.form-control` to any
+// of the following form controls:
+//
+select
+textarea
+input[type="text"]
+input[type="password"]
+input[type="datetime"]
+input[type="datetime-local"]
+input[type="date"]
+input[type="month"]
+input[type="time"]
+input[type="week"]
+input[type="number"]
+input[type="email"]
+input[type="url"]
+input[type="search"]
+input[type="tel"]
+input[type="color"]
+.form-control
+  display block
+  width 100%
+  height $input-height-base
+  // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+  padding $padding-base-vertical $padding-base-horizontal
+  font-family $input-font
+  font-size $base-font-size
+  line-height $line-height-base
+  color $input-color
+  background-color $input-bg
+  background-image none
+  // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+  border $input-border-width solid $input-border-color
+  border-radius $input-border-radius
+  box-shadow none
+
+  transition border-color ease-in-out .15s, box-shadow ease-in-out .15s
+
+  // Customize the `:focus` state to imitate native WebKit styles.
+  form-control-focus()
+
+  // Placeholder
+  placeholder()
+
+  // Disabled and read-only inputs
+  //
+  // HTML5 says that controls under a fieldset > legend:first-child won't be
+  // disabled if the fieldset is disabled. Due to implementation difficulty, we
+  // don't honor that edge case; we style them as disabled anyway.
+  &[disabled], &[readonly], fieldset[disabled] &
+    cursor not-allowed
+    background-color $input-bg-disabled
+    opacity 1
+    // iOS fix for unreadable disabled content
+
+// Reset height for `textarea`s
+textarea
+  height auto
+
+
+// Search inputs in iOS
+//
+// This overrides the extra rounded corners on search inputs in iOS so that our
+// `.form-control` class can properly style them. Note that this cannot simply
+// be added to `.form-control` as it's not specific enough. For details, see
+// https://github.com/twbs/bootstrap/issues/11586.
+input[type="search"]
+  -webkit-appearance none
+
+// Special styles for iOS date input
+//
+// In Mobile Safari, date inputs require a pixel line-height that matches the
+// given height of the input.
+input[type="date"]
+  line-height $input-height-base
+
+// Form groups
+//
+// Designed to help with the organization and spacing of vertical forms. For
+// horizontal forms, use the predefined grid classes.
+.form-group
+  margin-bottom rem(15px)
+
+// Checkboxes and radios
+//
+
+input[type="checkbox"]
+input[type="radio"]
+  opacity: 0
+  width: 0
+  height: 0
+  position absolute
+
+  & + label
+    margin-top rem(10px)
+    margin-bottom rem(10px)
+
+    &
+    &::before
+    &::after
+      cursor pointer
+      transition all 200ms ease-in-out
+
+  & + label
+    font-weight normal
+    position relative
+
+  // space out consecutive inline controls
+  & + label + input + label
+    margin-left 1.5em
+
+  // border and fill
+  & + label::before
+  & + label::after
+    margin-right .5em
+  & + label::before
+    border 2px solid $input-border
+    box-sizing border-box
+    content ' '
+    display inline-block
+    height $line-height-computed
+    width $line-height-computed
+    vertical-align text-top
+
+  // the fill
+  // & + label::after
+  //     background-color $input-border-color-active
+  //     box-sizing border-box
+  //     content ''
+  //     position absolute
+  //     opacity 0
+
+  &:focus
+    & + label::before
+      outline 0
+      box-shadow 0 0 8px $input-border-focus
+
+  &:hover
+    & + label::before
+      border 2px solid $input-border-color-hover
+  &:active
+  &:checked
+    & + label::before
+      border 2px solid $input-border-color-active
+      background-color: $input-border-color-active
+  &:checked
+    & + label::after
+      opacity 1
+
+// Circular radios
+input[type="radio"]
+  // the border
+  & + label::before
+    border-radius 50%
+    padding: 4px
+  &:active
+  &:checked
+    & + label::before
+      background-clip: content-box
+
+// Checkbox filled with icon
+input[type="checkbox"]
+  // the fill
+  & + label::after
+      checkSize = ($line-height-computed - 10)
+      content: ' '
+      mask: embedurl("../sprites/checkmark.svg", "utf8") no-repeat 50% 50%/checkSize checkSize
+      height ($line-height-computed - 6)
+      width ($line-height-computed - 6)
+      left rem(3px)
+      top rem(3px)
+      opacity 0
+      position absolute
+      background-color: $white
+      transition: opacity 200ms ease-out
+      vertical-align middle
+  &:active
+  &:checked
+    & + label::after
+      opacity 1
+
+
+
+
+
+// .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"]
+//   float left
+//   margin-left -20px
+
+// .radio + .radio, .checkbox + .checkbox
+//   margin-top -5px
+//   // Move up sibling radios or checkboxes for tighter spacing
+
+// // Radios and checkboxes on same line
+// .radio-inline, .checkbox-inline
+//   display inline-block
+//   padding-left rem(20px)
+//   margin-bottom 0
+//   vertical-align middle
+//   font-weight normal
+//   cursor pointer
+
+// .radio-inline + .radio-inline, .checkbox-inline + .checkbox-inline
+//   margin-top 0
+//   margin-left rem(10px)
+//   // space out consecutive inline controls
+
+// Apply same disabled cursor tweak as for inputs
+//
+// Note: Neither radios nor checkboxes can be readonly.
+input[type="radio"], input[type="checkbox"]
+  &[disabled], fieldset[disabled] &
+    cursor not-allowed
+
+// Form control feedback states
+//
+// Apply contextual and semantic states to individual form controls.
+.has-feedback
+  // Enable absolute positioning
+  position relative
+  // Ensure icons don't overlap text
+  .form-control
+    padding-right ($input-height-base * 1.25)
+
+  // Feedback icon (requires .glyphicon classes)
+  .form-control-feedback
+    position absolute
+    top ($line-height-computed + 5)
+    // Height of the `label` and its margin
+    right 0
+    display block
+    width $input-height-base
+    height $input-height-base
+    line-height $input-height-base
+    text-align center
+
+
+// Feedback states
+.has-success
+  form-control-validation($state-success-text, $state-success-text, $state-success-bg)
+
+
+.has-warning
+  form-control-validation($state-warning-text, $state-warning-text, $state-warning-bg)
+
+
+.has-error
+  form-control-validation($state-danger-text, $state-danger-text, $state-danger-bg)
+
+
+// Static form control text
+//
+// Apply class to a `p` element to make any string of text align with labels in
+// a horizontal form layout.
+.form-control-static
+  margin-bottom 0
+  // Remove default margin from `p`
+
+// Help text
+//
+// Apply to any element you wish to create light text for placement immediately
+// below a form control. Use for general help, formatting, or instructional text.
+.help-block
+  display block
+  // account for any element using help-block
+  margin-top rem(5px)
+  margin-bottom rem(10px)
+  color lighten($text-color, 25%)
+  // lighten the text some for contrast
+
+// Inline forms
+//
+// Make forms appear inline(-block) by adding the `.form-inline` class. Inline
+// forms begin stacked on extra small (mobile) devices and then go inline when
+// viewports reach <768px.
+//
+// Requires wrapping inputs and labels with `.form-group` for proper display of
+// default HTML form controls and our custom form controls (e.g., input groups).
+//
+form-inline()
+  // Kick in the inline
+  +above(m)
+    // Inline-block all the things for "inline"
+    .form-group
+      display inline-block
+      margin-bottom 0
+      vertical-align middle
+
+    // In navbar-form, allow folks to *not* use `.form-group`
+    .form-control
+      display inline-block
+      width auto
+      // Prevent labels from stacking above inputs in `.form-group`
+      vertical-align middle
+
+    // Input groups need that 100% width though
+    .input-group > .form-control
+      width 100%
+
+    .control-label
+      margin-bottom 0
+      vertical-align middle
+
+    // Remove default margin on radios/checkboxes that were used for stacking, and
+    // then undo the floating of radios and checkboxes to match (which also avoids
+    // a bug in WebKit: https://github.com/twbs/bootstrap/issues/1969).
+    .radio, .checkbox
+      display inline-block
+      margin-top 0
+      margin-bottom 0
+      padding-left 0
+      vertical-align middle
+
+    .radio input[type="radio"], .checkbox input[type="checkbox"]
+      float none
+      margin-left 0
+
+    // Validation states
+    //
+    // Reposition the icon because it's now within a grid column and columns have
+    // `position: relative;` on them. Also accounts for the grid gutter padding.
+    .has-feedback .form-control-feedback
+      top 0
+
+.form-inline
+  form-inline()
+
+// Horizontal forms
+//
+// Horizontal forms are built on grid classes and allow you to create forms with
+// labels on the left and inputs on the right.
+.form-horizontal
+  // Consistent vertical alignment of labels, radios, and checkboxes
+  .control-label, .radio, .checkbox, .radio-inline, .checkbox-inline
+    margin-top 0
+    margin-bottom 0
+    padding-top ($padding-base-vertical + 1)
+    // Default padding plus a border
+
+  // Account for padding we're adding to ensure the alignment and of help text
+  // and other content below items
+  .radio, .checkbox
+    min-height ($line-height-computed + ($padding-base-vertical + 1))
+
+  // Make form groups behave like rows
+  // .form-group
+    // make-row()
+
+
+  .form-control-static
+    padding-top ($padding-base-vertical + 1)
+
+  // Only right align form labels here when the columns stop stacking
+  +above(m)
+    .control-label
+      text-align right
+
+  // Validation states
+  //
+  // Reposition the icon because it's now within a grid column and columns have
+  // `position: relative;` on them. Also accounts for the grid gutter padding.
+  .has-feedback .form-control-feedback
+    top 0
+    // right (grid-gutter-width / 2)
