--- a/src/styles/modules/_block-home-featured-video.styl
+++ b/src/styles/modules/_block-home-featured-video.styl
@@ -2,9 +2,9 @@
   background-color $module-video-feature-background-color
   position relative
   height 0
-  padding-bottom ((15/16)*100)%
+  padding-bottom percentage(15/16)
   +above(m)
-    padding-bottom ((5/12)*100)%
+    padding-bottom percentage(5/12)
 
   figure
     line-height 0
@@ -26,11 +26,11 @@
     figure.mobile
       display none
       visibility none
-      padding-bottom ((15/16)*100)%
+      padding-bottom percentage(15/16)
     figure.desktop
       display block
       visibility visible
-      padding-bottom ((5/12)*100)%
+      padding-bottom percentage(5/12)
 
   #block--featured-video--content
     position absolute
