--- a/src/styles/site/_content.styl
+++ b/src/styles/site/_content.styl
@@ -76,22 +76,39 @@
     font-size: 1em
     line-height: 1.42857143
   code
-    color $red
+    color rgb(199, 37, 78, 1)
     padding: rem(2px) rem(4px)
     font-size: 90%
-    color: $red
-    background-color: lighten($red, 50%)
-    border-radius: $border-radius-3
+    background-color: rgb(249, 242, 244, 1)
+    border-radius: $border-radius-base
+    white-space nowrap
+  kbd
+    padding 2px 4px
+    font-size 90%
+    color rgb(255, 255, 255, 1)
+    background-color rgb(51, 51, 51, 1)
+    border-radius $border-radius-base
+    box-shadow inset 0 -1px 0 rgba(0, 0, 0, 0.25)
   pre
-    padding: rem(10px)
-    margin: 0 0 1em
-    color: $dark
-    word-break: break-all
-    word-wrap: break-word
-    background-color: $light-gray
-    border: $border-width-1 solid $medium-gray
-    border-radius: $border-radius-3
-    overflow-x scroll
+    display block
+    padding (($line-height-computed - 1) / 2)
+    margin 0 0 ($line-height-computed / 2)
+    font-size ($base-font-size - 1)
+    line-height $line-height-base
+    color: $dark-gray
+    word-break break-all
+    word-wrap break-word
+    background-color: rgb(245, 245, 245, 1)
+    border: $border-width-base solid rgb(204, 204, 204, 1)
+    border-radius: $border-radius-base
+    // Account for some code outputs that place code tags in pre tags
+    code
+      padding 0
+      font-size inherit
+      color inherit
+      white-space pre-wrap
+      background-color transparent
+      border-radius 0
 
 .image-grid
   // our flexbox container
