--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -19,7 +19,7 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 
 @import './inc/_box-sizing'
 @import './inc/_touch-action'
-@import './inc/_images'
+@import './inc/_media'
 @import './inc/_code'
 @import './inc/_forms'
 @import './inc/_hidden'
