--- a/templates/modules/nav/_nav-main.twig
+++ b/templates/modules/nav/_nav-main.twig
@@ -1,4 +1,4 @@
-{% set nav = menus.mainMenu %}
+{% set nav = menus.mainMenu.all() %}
 
 <ul class="nav--main">
   {% include 'modules/header/_logo' %}
