--- a/templates/modules/content/_block-process.twig
+++ b/templates/modules/content/_block-process.twig
@@ -1,7 +1,7 @@
 <section id="block--process">
   <p>Website Created in Collaboration with: <a href="{{ entry.collaborationLearnMore.one().url }}" title="Read More About the Process">Read More About the Process</a></p>
 
-  {%- set collaborations = entry.collaboration.limit(3) -%}
+  {%- set collaborations = entry.collaboration.limit(3).all() -%}
 
   {% for collaboration in collaborations %}
   {%- set logo = collaboration.collaborationLogo.one() -%}
