--- a/templates/modules/footer/_copyright-nav.twig
+++ b/templates/modules/footer/_copyright-nav.twig
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    {% set copyrightNav = footer.footerSubMenu %}
+    {% set copyrightNav = footer.footerSubMenu.all() %}
     {% nav item in copyrightNav %}
       {% if item.type == "customMenuItem" %}
         <li class="footer--copyright-nav--item footer--copyright-nav--item-text"><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
