--- a/templates/modules/footer/_nav.twig
+++ b/templates/modules/footer/_nav.twig
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    {% set nav = footer.footerMenu %}
+    {% set nav = footer.footerMenu.all() %}
     {% nav item in nav %}
       {% if item.type == "customMenuItem" %}
         <li class="footer--nav--item footer--nav--item-text"><a href="{{item.menuItemUrl}}"{% if item.newWindow %} target="_blank"{% endif %}>{{item.menuItemTitle}}</a></li>
