--- a/templates/structure/pages/_types/_landing.twig
+++ b/templates/structure/pages/_types/_landing.twig
@@ -19,7 +19,7 @@
         'section' : 'pages',
         'level' : 2,
         'descendantOf' : entry.id
-    }) %}
+    }).all() %}
     {% for entry in pages %}
       {% include 'modules/nav/_block_subpage' %}
     {% endfor %}
