fix background color

--- a/src/styles/inc/_forms.styl
+++ b/src/styles/inc/_forms.styl
@@ -858,7 +858,7 @@ $choices-button-offset = 8px
 .{$choices-selector}__input
   display: inline-block
   vertical-align: baseline
-  background-color: $light-gray
+  background-color: $choices-bg-color
   font-size: $choices-font-size-md
   margin-bottom: 5px
   border: 0
