--- a/templates/modules/content/_block-home-featured-video.twig
+++ b/templates/modules/content/_block-home-featured-video.twig
@@ -41,12 +41,14 @@
       </figure>
     {% endif %}
 
+    {% set video = craft.videos.getVideoByUrl(videoBlock.video) %}
+
     <div id="block--featured-video--content">
       <div id="block--featured-video--title">
         <h2>{{ videoBlock.headline }}</h2>
         {% if videoBlock.subHeadline %}<h3>{{ videoBlock.subHeadline }}</h3>{% endif %}
       </div>
-      <a id="block--featured-video--play" data-fancybox href="{{ videoBlock.video }}" data-options='{"toolbar" : false, "smallBtn" : true}'><span>Play Video</span></a>
+      <a id="block--featured-video--play" data-fancybox href="{{ video.url }}" data-options='{"toolbar" : false, "smallBtn" : true}'><span>Play Video</span></a>
     </div>
   </section>
 {% endif %}
