--- a/templates/modules/images/_grid-image.twig
+++ b/templates/modules/images/_grid-image.twig
@@ -7,6 +7,7 @@
   {%- set small = { width: 40, height: 40 / aspectRatio, quality: initialQuality } -%}
   {%- set medium = { width: 100, height: 100 / aspectRatio, quality: initialQuality } -%}
 {%- else -%}
+  {%- set aspectRatio = (4/3) -%} {# Default aspect ratio #}
   {%- set small = { width: 40, quality: initialQuality } -%}
   {%- set medium = { width: 100, quality: initialQuality } -%}
 {%- endif -%}
