update video variable after Dukt fix

--- a/templates/modules/content/_block-home-featured-video.twig
+++ b/templates/modules/content/_block-home-featured-video.twig
@@ -41,7 +41,7 @@
       </figure>
     {% endif %}
 
-    {% set video = craft.videos.getVideoByUrl(videoBlock.video) %}
+    {% set video = videoBlock.video %}
 
     <div id="block--featured-video--content">
       <div id="block--featured-video--title">
