--- a/templates/layouts/base/_base.twig
+++ b/templates/layouts/base/_base.twig
@@ -6,7 +6,7 @@
 
 {% block core %}
 
-  {% if entry is defined %}{% include 'modules/bread/_crumbs' %}{% endif %}
+  {% block crumbs %}{% if entry is defined %}{% include 'modules/bread/_crumbs' %}{% endif %}{% endblock %}
 
   {% block content %}{% endblock %}
 
