--- a/templates/structure/minutes-agendas/index.twig
+++ b/templates/structure/minutes-agendas/index.twig
@@ -2,13 +2,16 @@
     Minutes & Agendas Landing Template
 #}
 
-{% extends "layouts/columns/_one" %}
-
-{% set title = entry.title %}
+{% extends "layouts/type/_list" %}
 
 {# HTML #}
-{% block main %}
+{% block listContent %}
 
-<h1>{{ entry.title }}</h1>
+{% set entryIds = craft.entries.section('minutesAgendas').ids() %}
+{% set boards = craft.entries.relatedTo({ sourceElement: entryIds }).find() %}
+
+{% for board in boards %}
+  <li><span>{{ board.title }}</span> <a href="{{ (craft.app.request.segments|last) ~ '/' ~ board.slug }}" title="View all Minutes &amp; Agendas for {{ board.title }}">View</a></li>
+{% endfor %}﻿
 
 {% endblock %}
