--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -25,8 +25,9 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import './inc/_hidden'
 @import './inc/_tables'
 @import './inc/_typography'
-@import './inc/_z-index'
 @import './inc/_buttons'
+@import './inc/_other'
+@import './inc/_z-index'
 
 @import './modules/_main-menu'
 @import './modules/_side-menu'
