--- a/templates/structure/minutes-agendas/_category.twig
+++ b/templates/structure/minutes-agendas/_category.twig
@@ -1,3 +1,22 @@
-{% set category = craft.app.request.getSegment(3) %}
+{#
+    Minutes & Agendas Board Landing Template
+#}
 
-{{ category }}
+{% extends "layouts/type/_list" %}
+
+{% block listContent %}
+
+{% set slug = craft.app.request.getSegment(3) %}
+{% set landing = craft.entries.section('minutesAgendasLanding').one() %}
+{% set board = craft.entries.section('boards').slug(slug).one() %}
+
+{% set allEntries = craft.entries.section('minutesAgendas').relatedTo(board).all() %}
+{% for year, entriesInYear in allEntries | group("meetingDate|date('Y')") %}
+
+<li><span>{{ year }} - {{ landing }}</span> <a href="{{ board.slug ~ '/' ~ year }}" title="View all Minutes &amp; Agendas for {{ board.title }} in {{ year }}">View</a></li>
+
+{% endfor %}
+
+{% endblock %}
+
+
