change row bg colors

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -581,8 +581,8 @@ $list-intro-text-size-mobile = rem(18px)
 $list-intro-text-size-desktop = rem(18px)
 $list-intro-text-color = $navy
 
-$list-content-row-bg-color = $light-gray
-$list-content-row-bg-color-alt = $background-gray
+$list-content-row-bg-color = $background-gray
+$list-content-row-bg-color-alt = $white
 $list-content-row-text-color = $navy
 $list-content-row-text-weight = 700
 $list-content-row-text-weight-alt = 400
