fix footer after some layout rejiggering

--- a/src/styles/site/_layout-columns.styl
+++ b/src/styles/site/_layout-columns.styl
@@ -46,6 +46,8 @@
   .page-type--standard
     aside
       margin-top -(rem(144px))
+  .page-type--landing #page--inner--columns
+    padding-bottom 0
   .page-section--newsEvents
     aside
       margin-top -(rem(80px))
