--- a/src/styles/modules/_footer.styl
+++ b/src/styles/modules/_footer.styl
@@ -1,4 +1,5 @@
-#page--inner footer
+#page > footer
+.parallax__layer--base > footer
   background-color: $footer-background-color
   border-top: $footer-top-border-height solid $footer-top-border-color
   display block
